--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,16 @@
     margin: 0;
     padding: 0;
     border-radius: 2px;
+    box-sizing: border-box;
+}
+
+html, body {
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 body {
     background-color: var(--background-color);
-    overflow-x: hidden;
 }
 
 .HeadphoneHero {
